flow_apps/Flow-Based Knowledge/force-app/main/default/objects/Knowledge__kav/fields/Body_Content_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Body_Content_Rich_Text__c</fullName>
    <label>Body Content (Rich Text)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>