flow_apps/Flow-Based Knowledge/force-app/main/default/objects/Knowledge__kav/fields/BodyRichText__c.field-meta.xml
<CustomField>
    <fullName>BodyRichText__c</fullName>
    <label>BodyRichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>