flow_apps/Flow-Based Knowledge/force-app/main/default/objects/Knowledge__kav/fields/Default_View__c.field-meta.xml
<CustomField>
    <fullName>Default_View__c</fullName>
    <label>Default View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>