flow_apps/Flow-Based Knowledge/force-app/main/default/objects/Knowledge__kav/fields/High_Impact_Justification__c.field-meta.xml
<CustomField>
    <fullName>High_Impact_Justification__c</fullName>
    <label>High Impact Justification</label>
    <length>200</length>
    <type>Text</type>
</CustomField>