flow_apps/Flow-Based Knowledge/force-app/main/default/objects/Knowledge__kav/fields/ImpactRating__c.field-meta.xml
<CustomField>
    <fullName>ImpactRating__c</fullName>
    <label>Impact Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>