flow_apps/Flow-Based Knowledge/force-app/main/default/objects/Knowledge__kav/fields/Knowledge_Rich_Content__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Rich_Content__c</fullName>
    <label>Knowledge Rich Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>