flow_apps/Flow-Based Knowledge/force-app/main/default/objects/Knowledge__kav/fields/ViewFlowName__c.field-meta.xml
<CustomField>
    <fullName>ViewFlowName__c</fullName>
    <label>View Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>